CAMEL-23672: camel-tui - Interactive topology diagram with route drill-down (#23762)
* CAMEL-23672: camel-tui - Interactive topology navigation with info panel and route drill-down

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* CAMEL-23672: camel-tui - Native topology diagram renderer bypassing ASCII art

Adds TopologyDiagramWidget that renders directly to TamboUI Buffer using
Unicode box-drawing characters, eliminating the char[][] grid intermediary.
Batch loads topology + all route structures in a single background operation,
caching route layouts for instant drill-down without additional IPC calls.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* CAMEL-23672: camel-tui - Single IPC call for topology + route structure

Add routes=true option to route-topology dev console that includes
route structure data in the same response, eliminating a second IPC
round-trip when loading the TUI diagram tab.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: camel-tui - Fix race condition in selectedPid null check

Capture selectedPid in a local variable before the null check to
prevent NPE when another thread nulls the field between the guard
and the lambda.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmail.com>

* CAMEL-23672: camel-tui - Native route EIP diagram widget with node navigation

Renders route EIP diagrams directly to TamboUI Buffer, bypassing the ASCII
renderer. EIP nodes are drawn with type-specific colors, scope boxes use
dashed borders, and edges show metrics counters. Arrow keys navigate between
EIP nodes with an info panel showing processor-level metrics (total, failed,
inflight, processing times). Drill-down and escape use cached layout data
so no IPC is needed when switching between topology and route views.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>
Signed-off-by: Claus Ibsen <claus.ibsen@gmai